# ForgeTerminal

./: .gitignore  CONTRIBUTING.md  README.md  forge-context-menu.reg  index.html  package-lock.json  package.json  plan.md  pnpm-lock.yaml  tsconfig.json  vercel.json
site/: index.html  script.js  styles.css
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: contextmenu.rs  filesystem.rs  mod.rs  terminal.rs  window.rs  workspace.rs
src-tauri/src/pty/: manager.rs
src/components/: ErrorBoundary.tsx
src/components/common/: CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ForgeLogo.tsx  PastSessionsDialog.tsx  PathInputDialog.tsx  RenameDialog.tsx  Tutorial.tsx
src/components/editor/: CodeMirrorEditor.tsx
src/components/explorer/: ExplorerContextMenu.tsx  FileExplorer.tsx  FileTree.tsx  NewItemDialog.tsx  PathPickerDialog.tsx
src/components/layout/: MainLayout.tsx  PanelResizer.tsx  TitleBar.tsx
src/components/preview/: WebPreviewPanel.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: commands.ts  editorTheme.ts  ipc.ts  languages.ts  prefixMode.ts  shortcuts.ts  splitUtils.ts  themes.ts  utils.ts
src/stores/: configStore.ts  confirmStore.ts  editorStore.ts  explorerStore.ts  historyStore.ts  previewStore.ts  shortcutStore.ts  tabStore.ts  terminalStore.ts  workspaceStore.ts
src/styles/: globals.css
src/types/: config.ts  editor.ts  tauri.d.ts  terminal.ts  workspace.ts
(+16 files in other folders)
