[package]
name = "forge"
version = "0.1.0"
description = "Forge - Terminal Emulator + Multiplexer + Editor"
authors = ["Forge"]
edition = "2021"

[lib]
name = "forge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
anyhow = "1"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
